# memis

./: .envrc  .gitattributes  .gitignore  README.md  default.nix  memis.cabal  stack.yaml
nix/: sources.json
src/: Main.hs
static/: script.js  style.css
