name:                memis
version:             0.1.0.0
synopsis:            Memis Efficient Manual Image Sorting
-- description:         
homepage:            http://johannesgerer.com/memis
license:             MIT
license-file:        LICENSE
author:              Johannes Gere
maintainer:          oss@johannesgerer.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable memis
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    FlexibleInstances, ScopedTypeVariables, FlexibleContexts, OverloadedStrings, NoMonomorphismRestriction
  build-depends:       aeson
                     , base
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , directory >= 1.2.3.0
                     , filemanip
                     , filepath
                     , http-types
                     , mime-types
                     , process
                     , process-extras
                     , regex-compat
                     , regex-pcre-builtin
                     , regex-tdfa
                     , safe
                     , simple
                     , split 
                     , text
                     , transformers
                     , unordered-containers
                     , utf8-string
                     , wai
                     , wai-extra
                     , wai-middleware-static
                     , warp
                     -- , directory-tree
  hs-source-dirs:      src
  default-language:    Haskell2010