name:                memis
version:             0.1.1
synopsis:            Memis Efficient Manual Image Sorting
-- description:         
homepage:            http://johannesgerer.com/memis
license:             MIT
license-file:        LICENSE
author:              Johannes Gerer
Maintainer:          Johannes Gerer <oss@johannesgerer.com>
category:            Data
build-type:          Simple
cabal-version:       >=1.10
description:
   Memis allows to efficiently rename and sort image files into directories, via an intelligent web-interface.

   .
   See <https://github.com/johannesgerer/memis Readme> on Github.

Extra-source-files:
                   README.md
                   stack.yaml

executable memis
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    FlexibleInstances, ScopedTypeVariables, FlexibleContexts, OverloadedStrings, NoMonomorphismRestriction
  build-depends:       aeson
                     , base
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , directory >= 1.2.3.0
                     , filemanip
                     , filepath
                     , http-types
                     , mime-types
                     , process
                     , process-extras
                     , regex-compat
                     , regex-pcre-builtin
                     , regex-tdfa
                     , safe
                     , simple
                     , split 
                     , text
                     , transformers
                     , unordered-containers
                     , utf8-string
                     , wai
                     , wai-extra
                     , wai-middleware-static
                     , warp
                     -- , directory-tree
  hs-source-dirs:      src
  default-language:    Haskell2010